src/test/valid/extensionTests/implicit_parameters/array_elements/UnOp.wacc
# a simple function definition and call

# Output:
# 0

# Program:

begin
  int f(a) is
    int x = ord a[1][2] ;
    return 0 
  end
  println 0
end
