src/test/invalid/semanticErr/extensionTests/classes/classUndeclaredAttribute.wacc
# Attribute needs to be declared to be accessed

begin
  int f() is
    return 1
  end

  class Car() is
    int speed;

    Car(int s) is
      speed = s
    end

    int getSpeed() is
      return speed
    end
  end

  int x = call f();
  println x;

  car = new Car(x);
  car.colour = 2

end
